# azdo-linter

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
feature/: AGENTS.md  README.md  prd.json  progress.txt  prompt.md  ralph.sh
src/: azure.rs  error.rs  lib.rs  main.rs  parser.rs  validator.rs
tests/: integration_tests.rs
tests/fixtures/: pipeline_mixed.yml  pipeline_with_conditionals.yml  pipeline_with_filtering.yml  pipeline_with_groups.yml  pipeline_with_inline_vars.yml  pipeline_with_map_conditionals.yml  pipeline_with_stages.yml
