[package]
name = "azdolint"
version = "0.2.0"
edition = "2021"
authors = ["Dariusz Parys"]
description = "CLI tool that validates Azure DevOps pipeline YAML files by checking that referenced variable groups and variables exist"
license = "MIT"
repository = "https://github.com/dariuszparys/azdo-linter"
homepage = "https://github.com/dariuszparys/azdo-linter"
readme = "README.md"
keywords = ["azure-devops", "pipeline", "yaml", "linter", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
regex = "1.0"
